fix mobile animation, stuck on hover

--- a/css/index.css
+++ b/css/index.css
@@ -1307,30 +1307,40 @@ footer .footer-list li a svg {
   -webkit-transition: opacity 130ms ease-in-out 0.18s;
   transition: opacity 130ms ease-in-out 0.18s;
 }
-.menu-cards .cards .add-to-cart input[type=checkbox]:checked::after, .menu-cards .cards .add-to-cart input[type=checkbox]:hover::after {
-  right: 20px;
-  -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
+@media (min-width: 1024px) {
+  .menu-cards .cards .add-to-cart input[type=checkbox]:checked::after, .menu-cards .cards .add-to-cart input[type=checkbox]:hover::after {
+    right: 20px;
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
-.menu-cards .cards .add-to-cart input[type=checkbox]:checked::before, .menu-cards .cards .add-to-cart input[type=checkbox]:hover::before {
-  background-color: #99e2d0;
-  right: 0px;
+@media (min-width: 1024px) {
+  .menu-cards .cards .add-to-cart input[type=checkbox]:checked::before, .menu-cards .cards .add-to-cart input[type=checkbox]:hover::before {
+    background-color: #99e2d0;
+    right: 0px;
+  }
 }
-.menu-cards .cards .add-to-cart input[type=checkbox]:hover::after {
-  -webkit-animation: shake 1s ease-in-out infinite alternate;
-          animation: shake 1s ease-in-out infinite alternate;
+@media (min-width: 1024px) {
+  .menu-cards .cards .add-to-cart input[type=checkbox]:hover::after {
+    -webkit-animation: shake 1s ease-in-out infinite alternate;
+            animation: shake 1s ease-in-out infinite alternate;
+  }
 }
 .menu-cards .cards .add-to-cart input[type=checkbox]:checked::after {
   -webkit-animation: shake 0s;
           animation: shake 0s;
 }
-.menu-cards .cards .add-to-cart input[type=checkbox]:checked + label,
-.menu-cards .cards .add-to-cart input[type=checkbox]:hover + label {
+.menu-cards .cards .add-to-cart input[type=checkbox]:checked + label {
   right: 45px;
 }
 .menu-cards .cards .add-to-cart input[type=checkbox]:checked + .big-text::before {
   display: inline-block;
   opacity: 1;
+}
+@media (min-width: 1024px) {
+  .menu-cards .cards .add-to-cart input[type=checkbox]:hover + label {
+    right: 45px;
+  }
 }
 
 .order-button {
